discourse_sidekiq.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discourse
      component: sidekiq
  template:
    metadata:
      labels:
        app: discourse
        component: sidekiq
    spec:
      containers:
      - args:
        - nami
        - start
        - --foreground
        - discourse-sidekiq
        image: bitnami/discourse
        name: web-sidekiq
