discourse.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: discourse
    component: web-server
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: discourse
    component: web-server
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discourse
      component: web-server
  template:
    metadata:
      labels:
        app: discourse
        component: web-server
    spec:
      containers:
      - env:
        - name: DISCOURSE_USERNAME
          valueFrom:
            secretKeyRef:
              name: discourse-secret-2b6mh7mh79
              key: admin_user
        - name: DISCOURSE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: discourse-secret-2b6mh7mh79
              key: admin_password
        - name: DISCOURSE_EMAIL
          value: your@email.com
        - name: DISCOURSE_SKIP_INSTALL
          value: "yes"
        - name: POSTGRESQL_HOST
          value: discourse-postgres-srv
        - name: POSTGRESQL_ROOT_USER
          valueFrom:
            secretKeyRef:
              name: discourse-secret-2b6mh7mh79
              key: db_user
        - name: POSTGRESQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: discourse-secret-2b6mh7mh79
              key: db_password
        - name: DISCOURSE_POSTGRESQL_USERNAME
          valueFrom:
            secretKeyRef:
              name: discourse-secret-2b6mh7mh79
              key: db_user
        - name: DISCOURSE_POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: discourse-secret-2b6mh7mh79
              key: db_password
        - name: DISCOURSE_POSTGRESQL_NAME
          value: discourse
        - name: REDIS_HOST
          value: discourse-redis-srv
        - name: REDIS_PORT_NUMBER
          value: "6379"
        - name: DISCOURSE_HOSTNAME
          value: "your.domainame.com"
        - name: DISCOURSE_SITENAME
          value: "My Site"
        - name: SMTP_HOST
          value: "smtp.domainame.com"
        - name: SMTP_PORT
          value: "587"
        - name: SMTP_USER
          valueFrom:
            secretKeyRef:
              key: smtp_user
              name: discourse-secret-2b6mh7mh79
        - name: SMTP_PASSWORD
          valueFrom:
            secretKeyRef:
              key: smtp_password
              name: discourse-secret-2b6mh7mh79
        image: bitnami/discourse
        name: web-server
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
          - name: discourse-storage
            mountPath: /bitnami
      volumes:
      - name: discourse-storage
        persistentVolumeClaim:
          claimName: discourse-pv-claim
