discourse_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discourse-svc
  labels:
    app: discourse
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: discourse
    component: web-server
  type: NodePort
