redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: discourse
        component: redis
    spec:
      containers:
      - name: master
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: discourse-redis-srv
  labels:
    app: discourse
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: discourse
    component: redis
  clusterIP: None
